added /today route
